--- a/workspace/flask/requirements.txt
+++ b/workspace/flask/requirements.txt
@@ -1,1 +1,16 @@
-psycopg2==2.8.4 
+alembic==1.4.0
+Click==7.0
+Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+Mako==1.1.1
+MarkupSafe==1.1.1
+psycopg2==2.8.4
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.14.0
+SQLAlchemy==1.3.13
+uWSGI==2.0.18
+Werkzeug==0.16.0
