--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,32 @@
 version: '3.4'
 
 services:
+  todos:
+    build:
+      context: ${PWD}/workspace/todos
+      dockerfile: Dockerfile
+    image: "todos"
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=true
+      - FLASK_CONFIG=development
+      - DEV_DATABASE_URL=postgresql://udacity:udacity@db:5432/todosapp
+      - STATIC_PATH=/app/application/static
+    ports:
+      - "60080:80"
+    volumes:
+      # remove the following for production with Dockerfile ADD
+      - ${PWD}/workspace/todos/application:/app/application
+      - ${PWD}/workspace/todos/migrations:/app/migrations
+      - ${PWD}/workspace/todos/tests:/app/tests
+      - ${PWD}/workspace/todos/config.py:/app/config.py
+      - ${PWD}/workspace/todos/app.py:/app/app.py
+      - ${PWD}/workspace/todos/requirements.txt:/app/requirements.txt
+      - ${PWD}/workspace/todos/uwsgi.ini:/app/uwsgi.ini      
+    depends_on:
+      - db
+      - adminer
+
   fyyur:
     build:
       context: ${PWD}/workspace/fyyur
@@ -10,7 +36,7 @@ services:
       - FLASK_APP=app.py
       - FLASK_DEBUG=true
       - FLASK_CONFIG=development
-      - DEV_DATABASE_URL=postgresql://udacity:udacity@db:5432/todoapp
+      - DEV_DATABASE_URL=postgresql://udacity:udacity@db:5432/fyyurapp
       - STATIC_PATH=/app/application/static
     ports:
       - "60080:80"
