--- a/workspace/fyyur/requirements.txt
+++ b/workspace/fyyur/requirements.txt
@@ -4,6 +4,7 @@ Click==7.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-Moment==0.9.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
