--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,6 @@
 version: '3.4'
 
 services:
-  todos:
-    build:
-      context: ${PWD}/workspace/todos
-      dockerfile: Dockerfile
-    image: "todos"
-    environment:
-      - FLASK_APP=app.py
-      - FLASK_DEBUG=true
-      - FLASK_CONFIG=development
-      - DEV_DATABASE_URL=postgresql://udacity:udacity@db:5432/todosapp
-      - STATIC_PATH=/app/application/static
-    ports:
-      - "60080:80"
-    volumes:
-      # remove the following for production with Dockerfile ADD
-      - ${PWD}/workspace/todos/application:/app/application
-      - ${PWD}/workspace/todos/migrations:/app/migrations
-      - ${PWD}/workspace/todos/tests:/app/tests
-      - ${PWD}/workspace/todos/config.py:/app/config.py
-      - ${PWD}/workspace/todos/app.py:/app/app.py
-      - ${PWD}/workspace/todos/requirements.txt:/app/requirements.txt
-      - ${PWD}/workspace/todos/uwsgi.ini:/app/uwsgi.ini      
-    depends_on:
-      - db
-      - adminer
-
   fyyur:
     build:
       context: ${PWD}/workspace/fyyur
@@ -55,41 +29,15 @@ services:
       - db
       - adminer
 
-  backend:
-    build:
-      context: ${PWD}/workspace/flask
-      dockerfile: Dockerfile
-    image: "backend"
-    environment:
-      - FLASK_APP=main.py
-      - FLASK_DEBUG=1
-      - FLASK_CONFIG=development
-      - DEV_DATABASE_URL=postgresql://udacity:udacity@db:5432/todoapp
-      - DATABASE_URL=postgresql://udacity:udacity@db:5432/todoapp
-    ports:
-      - "60080:80"
-    volumes:
-      # remove the following for production with Dockerfile ADD
-      - ${PWD}/workspace/flask/application:/app/application
-      - ${PWD}/workspace/flask/migrations:/app/migrations
-      - ${PWD}/workspace/flask/tests:/app/tests
-      - ${PWD}/workspace/flask/config.py:/app/config.py
-      - ${PWD}/workspace/flask/main.py:/app/main.py
-      - ${PWD}/workspace/flask/requirements.txt:/app/requirements.txt
-      - ${PWD}/workspace/psycopg2:/workspace/psycopg2
-    depends_on:
-      - db
-      - adminer
-
   db:
     image: "postgres"
     restart: always
     environment:
       - POSTGRES_USER=udacity
       - POSTGRES_PASSWORD=udacity
-      - POSTGRES_DB=udacity
+      - POSTGRES_DB=fyyurapp
     volumes:
-      - ${PWD}/data:/var/lib/postgresql/data
+      - ${PWD}/volume:/var/lib/postgresql/data
       - ${PWD}/workspace/psql:/workspace/psql
 
   adminer:
